<resources>
    <string name="app_name">Contact Sharing</string>
    <string name="phone_number">Enter Mobile Number</string>
    <string name="otp">Enter OTP</string>
    <string name="login">LOGIN</string>
    <string name="send">GENERATE OTP</string>
    <string name="send_message">SEND</string>
    <string name="welcome">Welcome!</string>
    <string name="heading_main">Now you can send your contact details quickly and easily</string>
    <string name="sign_in">Just sign in to continue</string>
    <string name="full_name">*Full Name</string>
    <string name="profession">Profession</string>
    <string name="website">Personal Website or Blog</string>
    <string name="company">Company</string>
    <string name="new_contact">New Contact</string>
    <string name="send_existing">Select Contact</string>
    <string name="profile_heading">My Details</string>
    <string name="company_title">Title</string>
    <string name="message">Write a message!!</string>
    <string name="mobile_number">*Mobile Number</string>
    <string name="e_mail_id">E-Mail Id</string>
    <string name="signUp">Sign Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="add_contact">Add Contact</string>
    <string name="send_contact">Send Contact Details</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="OTP_heading">Enter One Time Password</string>
    <string name="OTP_text">One Time Password (OTP) has been sent to your mobile, please enter the same here to login.</string>
    <string name="button">Button</string>
    <string name="official_mobile_number">Official Phone Number</string>
    <string name="alt_mobile_number">Alternate Mobile Number</string>
    <string name="LOCATION">*Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
